--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - checkout
       - run:
-          command: npm run lint
+         - command: npm i
+         - command: npm run lint
   
   test:
     docker:
@@ -16,7 +17,8 @@ jobs:
     steps:
       - checkout
       - run:
-          command: npm run test
+        - command: npm i
+        - command: npm run test
 
   analyze:
     docker:
