--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,16 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-         - command: npm i
-         - command: npm run lint
+      - run: npm i
+      - run: npm run lint
   
   test:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-        - command: npm i
-        - command: npm run test
+      - run: npm i
+      - run: npm run test
 
   analyze:
     docker:
